# wrtn_brain_team_assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  criminal_law.txt  docker-compose.yml  evluation.py  parsed_data.txt  parser.py  prompt.py  pyproject.toml  test_results_post.json  tools.py
